flicker-free handling of wiki-fixed class

--- a/hawtio-web/src/main/webapp/css/site-base.css
+++ b/hawtio-web/src/main/webapp/css/site-base.css
@@ -892,6 +892,7 @@ table.dataTable tbody tr td {
 }
 
 .wiki-fixed {
+  visibility: hidden; /* it'll be made visible by wikiFixed directive */
   margin-top: 45px;
 }
 
